Suppress code warnings + solve deprecated methods